--- a/.github/workflows/ci_build.yml
+++ b/.github/workflows/ci_build.yml
@@ -52,6 +52,9 @@ jobs:
         shell: bash -l {0}
         run: |
           pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml
+      - name: Calculate the docstring coverage
+        shell: bash -l {0}
+        run: python calc_docstring_coverage.py
       - name: Correct coverage paths
         if: matrix.os == 'ubuntu-latest'
         run: sed -i "s+$PWD/++g" coverage.xml
